--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 *.Rproj
 01-PYTHON/lecture-python/
 DU_réunion_rentrée_040924.pdf
+01-PYTHON/numpy-html/
+01-PYTHON/numpy-html.zip
+01-PYTHON/pandas.zip
+01-PYTHON/test.pdf
